# human_annotate

./: .gitignore  pyproject.toml
.github/workflows/: run_tests.yml
src/human_annotate/: __init__.py  human_annotation.py
tests/: test_human_annotation.py
