[project]
name = "human-annotate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "erwan serandour", email = "e.serandour@hispeed.ch" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
human-annotate = "human_annotate:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
