[project]
name = "human-annotate"
version = "0.1.0"
description = "a web app that allow you to annotate your example using dspy.Signature"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
authors = [
    { name = "erwan serandour", email = "e.serandour@hispeed.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6.27",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "python-fasthtml>=0.12.24",
]

[project.scripts]
human-annotate = "human_annotate:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
